Fixed QrCode display that fits center of iPads and covers the entire screen
Former-commit-id: f3efd9eed1fa092904bc83cc726763fffad66ee9

--- a/Huddle.DemoApp/style/demo.css
+++ b/Huddle.DemoApp/style/demo.css
@@ -1,28 +1,40 @@
 ﻿#qrcode-container {
-	top: 0px;
-	left: 0px;
-	position: relative;
-	background-color: white;
-	vertical-align: bottom;
-	margin-left:auto;
-	margin-right:auto;
-	width: 100%;
-	height: 100%;
-	display: none;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+    background-color: white;
+    vertical-align: bottom;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    display: none;
 }
 
 #qrcode {
-	vertical-align: middle;
-	margin-left:20px;
-	margin-right:20px;
+    margin-top: 50px;
+    text-align: center;
 }
 
 #peephole-canvas {
-	width: 3840px;
-	height: 2160px;
-	clear: both;
-	position: absolute;
-	background-image: url('background.png');
-	background-repeat: no-repeat;
-	background-size: 100%;
+    width: 3840px;
+    height: 2160px;
+    clear: both;
+    position: absolute;
+    background-image: url('background.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#presences-container {
+    background-color: yellow;
+    top: 0px;
+    left: 0px;
+    position: relative;
+    background-color: white;
+    vertical-align: bottom;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
 }
